--- a/public/about/index.html
+++ b/public/about/index.html
@@ -90,7 +90,7 @@
                     d="M824.264 95.36c0-23.859 25.043-44.16 48.902-44.16s49.714 20.301 49.714 44.16v190.08c0 23.859-19.054 52.868-42.913 52.868h-190.08c-23.859 0-46.696-25.96-46.696-49.819s22.55-46.249 46.409-46.249h82.025C702.344 175.534 610.22 155.853 512 155.853c-206.775 0-360.398 149.372-360.398 356.147 0 206.775 153.623 358.23 360.398 358.23 206.775 0 357.467-151.455 357.467-358.23 0-23.859 23.634-50.706 53.413-50.706 29.78 0 49.92 26.847 49.92 50.706 0 254.493-206.307 460.8-460.8 460.8-254.493 0-460.8-206.307-460.8-460.8C51.2 257.507 257.507 51.2 512 51.2c122.4 0 226.684 33.296 312.264 117.369 0.358 0.351 0.358-24.052 0-73.209z"
                     p-id="23839" fill="#adb5bd"></path>
             </svg>
-            2024-05-08&nbsp;&nbsp;&nbsp;
+            2024-05-09&nbsp;&nbsp;&nbsp;
         </span>
         <span>
             
@@ -103,7 +103,7 @@
                     d="M608.154093 288.092004A31.970084 31.970084 0 0 0 576.184009 320.062089v160.078006l-134.650049-179.278119A31.970084 31.970084 0 0 0 384.002258 320.062089v255.760676a31.970084 31.970084 0 0 0 63.940169 0v-159.958796l134.650048 179.274507a31.970084 31.970084 0 0 0 57.531703-19.200113V320.062089a31.970084 31.970084 0 0 0-31.970085-31.970085z"
                     fill="#adb5bd" p-id="33868"></path>
             </svg>
-            106 字</span>&nbsp;
+            210 字</span>&nbsp;
         <span>
             
             <svg t="1656737462334" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -138,15 +138,45 @@
 		<div><a href="#"><img src="/imgs/icons/up2.svg" alt=""></a></div>
 	</div>
 </div>
-        <nav id="TableOfContents"></nav>
+        <nav id="TableOfContents">
+  <ol>
+    <li>
+      <ol>
+        <li><a href="#教育经历">教育经历</a></li>
+        <li><a href="#获得荣誉">获得荣誉</a></li>
+        <li><a href="#联系方式">联系方式</a></li>
+      </ol>
+    </li>
+  </ol>
+</nav>
     </div>
 
     <div class='content  '>
-        <p>生命短暂犹若露珠消散，人们在奔波中探寻答案。</p>
-<p>运数仿佛大海起伏不定，掌上迷离脉纹回路漫漫。</p>
-<p>长剑在黑夜吟唱悲歌，岁月如斑驳铜镜经年。</p>
-<p>天际流火叩响大地之门，岁月星辰刻画沧桑年轮。</p>
-<p>纵横交错兮天下之局，谁能参悟兮世事如棋。</p>
+        <p><span style="font-size: 20px;"><b>生命短暂犹若露珠消散，人们在奔波中探寻答案。</b></span></br>
+<span style="font-size: 20px;"><b>运数仿佛大海起伏不定，掌上迷离脉纹回路漫漫。</b></span><br>
+<span style="font-size: 20px;"><b>长剑在黑夜吟唱悲歌，岁月如斑驳铜镜经年。</b></span><br>
+<span style="font-size: 20px;"><b>天际流火叩响大地之门，岁月星辰刻画沧桑年轮。</b></span><br>
+<span style="font-size: 20px;"><b>纵横交错兮天下之局，谁能参悟兮世事如棋。</b></span><br></p>
+<h2 id="教育经历">教育经历</h2>
+<ul>
+<li><b>计算机科学与技术</b>
+普普通通的二本学校</li>
+</ul>
+<h2 id="获得荣誉">获得荣誉</h2>
+<ul>
+<li><b>数学建模大赛山东赛区二等奖</b>
+2016 大学一年级 数据科学与计算机学院</li>
+<li><b>待更&hellip;&hellip;</b></li>
+</ul>
+<h2 id="联系方式">联系方式</h2>
+<ul>
+<li><b>电子邮箱</b>
+<a href="mailto:kylinBachelor@163.com">kylinBachelor@163.com</a></li>
+<li><b>地址</b>
+山东省济南市高新区，邮编：250000</li>
+<li><b>QQ</b>
+227144484</li>
+</ul>
 
     </div>
 
